7.0.4
 - Fix possible crash in `connection::connection_string` (#290).
 - Fix filtering of default values in `connection::connection_string` (#288).
 - Deprecate `row::swap` and public inheritance of iterators from `row`.
 - More copy/move constructors/assignments on result iterators.
7.0.3
 - Fixed misreporting of broken connection as `sql_error` (#280).
 - Replaced non-ASCII test texts with escape codes (#282, #283).
 - `ilostream` could truncate at `0xff` byte at buffer boundary (#284, #286).
7.0.2
 - New query function: `query_value`, queries and converts a single value.
 - A `stream_from` stream can now be iterated.
 - More callable types qualify as transactors, thanks to `std::invoke`.
7.0.1
 - Windows build fixes.
 - Documentation for writing your own string conversions.
 - `transaction_rollback` and children are now `sql_error`, not just `failure`.
7.0.0
 - Bumped minimum required C++ version to C++17.
 - Everything has changed.  If you're porting from older versions, be careful!
 - There is now only one connection class: `connection`.
 - Removed tablereader/tablewriter, replaced by stream_from/stream_to.
 - Removed obsolete transactor framework, replaced by post-C++11 one.
 - Removed old ways of invoking parameterised and prepared statements.
 - Session variables are no longer cached.
 - If you do weird stuff with setting/getting variables, it may break.
 - Reading a variable written from raw SQL, procedures, etc, will now work.
 - Prepared statements are now registered immediately.
 - If you do weird stuff with preparing/unpreparing statements, it may break.
 - Changed exceptions and errors for many error situations.
 - Mishandling prepared statements will now break the connection.
 - Many string references and const char pointers are now `std::string_view`.
 - New `zview` class wraps `string_view` for string with terminating zero.
 - The `stream_base` abstract base class is gone.
 - Transactions no longer have an `isolation_tag` nested type.